# BackEnd/blog/storage/api-docs/api-docs.json
@@ -1486,6 +1486,83 @@
                     }
                 ]
             }
+        },
+        "/user/pumpAutoOn": {
+            "post": {
+                "tags": [
+                    "MQTT"
+                ],
+                "summary": "Send msg via mqtt",
+                "description": "Send msg via mqtt",
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Send msg via mqtt",
+                        "required": true,
+                        "schema": {
+                            "properties": {
+                                "devicesId": {
+                                    "type": "integer"
+                                },
+                                "timeOn": {
+                                    "type": "integer"
+                                },
+                                "timeOff": {
+                                    "type": "integer"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ]
+            }
+        },
+        "/user/pumpAutoOff": {
+            "get": {
+                "tags": [
+                    "MQTT"
+                ],
+                "summary": "Turn off pump auto mode",
+                "description": "Turn off pump auto mode",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                },
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ]
+            }
         }
     },
     "definitions": {},
